# hatchr

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ci.yml  env.example
client/: index.html  package.json  tsconfig.json
client/src/: App.tsx  index.css  main.tsx
server/: Cargo.toml
server/src/: main.rs
